--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+start cmd: foreman start -f Procfile.local 
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
