--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,7 @@
 SandboxATS
 
 Desc: 
-This is a simple ats system that allows companies to create job postings under an umbrella company. The system
+This is an ats system that allows companies to create job postings under an umbrella company. The system
 includes an api for each company to pull all their job listings. As well as an api for the parent company to 
 pull all job postings for their children companies.
 
